fixed spacing between game and header

--- a/style/main.css
+++ b/style/main.css
@@ -66,7 +66,11 @@ body {
     
 }
 
-/* Styling the game/content */
+/* Styling the content */
 #content {
     text-align: center;
+}
+
+#game {
+    padding-top: 10px;
 }
